Added favicons. Updated index.html to use new favicons.

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="%PUBLIC_URL%/RITEsports_TigerLogo_Color.png" type="image/png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/RITEsports.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>RIT Esports</title>
