--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -40,6 +40,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/RITEsports.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 
   <title>RIT Esports</title>
 </head>
@@ -47,6 +49,22 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+  <script>
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#1e1e1e"
+        },
+        "button": {
+          "background": "transparent",
+          "text": "#f25822",
+          "border": "#f25822"
+        }
+      },
+      "position": "top"
+    });
+  </script>
 </body>
 
 </html>
