meta tags for cards

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -33,11 +33,27 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <meta property="og:title" content="RIT Esports">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.ritesports.org" />
+  <meta property="og:image"
+    content="https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/assets/Wallpaper.png" />
+  <meta property="og:description" content="An RIT Student Club Run Like a Professional Team" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@RITesports" />
+  <meta name="twitter:title" content="RIT Esports" />
+  <meta name="twitter:description" content="An RIT Student Club Run Like a Professional Team" />
+  <meta name="twitter:image"
+    content="https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/assets/Wallpaper.png" />
+
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png">
+
   <link rel="manifest" href="%PUBLIC_URL%/RITEsports.webmanifest">
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" type="text/css"
